--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ phpstan.neon
 
 ###> migration ###
 /migrations
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
