--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,24 +1,19 @@
 api_platform:
+    mapping:
+        paths: ['%kernel.project_dir%/src/Entity']
+    patch_formats:
+        json: ['application/merge-patch+json']
+    swagger:
+        versions: [3]
+        api_keys:
+            JWT:
+                name: Authorization
+                type: header
     title: RetroGamingShop API
     description: Boutique en ligne RetroGaming
     version: 0.0.1
-    formats:
-        jsonld: ['application/ld+json']
-    docs_formats:
-        jsonld: ['application/ld+json']
-        jsonopenapi: ['application/vnd.openapi+json']
-        html: ['text/html']
-    defaults:
-        stateless: true
-        cache_headers:
-            vary: ['Content-Type', 'Authorization', 'Origin']
-        extra_properties:
-            standard_put: true
-            rfc_7807_compliant_errors: true
-    event_listeners_backward_compatibility_layer: false
-    keep_legacy_inflector: false
     openapi:
-        contact:
-            name: KrystDev
-            url: https://krystdev.fr
-            email: hello@krystdev.fr
+            contact:
+                name: KrystDev
+                url: https://krystdev.fr
+                email: hello@krystdev.fr
