--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,10 +9,29 @@ security:
             entity:
                 class: App\Entity\Users
                 property: email
+        jwt:
+            lexik_jwt:
+                class: App\Entity\Users
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        api_login:
+            pattern: ^/api/login
+            stateless: true
+            provider: app_user_provider
+            json_login:
+                check_path: /api/login
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+        api:
+            pattern: ^/api
+            stateless: true
+            provider: jwt
+            jwt: ~
+
         main:
             lazy: true
             provider: app_user_provider
@@ -37,6 +56,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
