--- a/retroGamingShop/package.json
+++ b/retroGamingShop/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "tw-elements": "^1.1.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/test-utils": "^2.4.3",
+    "autoprefixer": "^10.4.16",
     "jsdom": "^23.0.1",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.0.10",
     "vitest": "^1.0.4"
   }
