--- a/retroGamingShop/package.json
+++ b/retroGamingShop/package.json
@@ -10,6 +10,11 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/vue-fontawesome": "^3.0.5",
     "axios": "^1.6.5",
     "tw-elements": "^1.1.0",
     "vue": "^3.3.11",
