--- a/retroGamingShop/package.json
+++ b/retroGamingShop/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/test-utils": "^2.4.3",
     "autoprefixer": "^10.4.16",
